src/other/mico-2.3.12/test/idl/error/case4.idl

/*
 * Overloading of attributes and operations is not permitted.
 */

interface B
{
  attribute long m;
};

interface D : B
{
  attribute char m;
};
